Fix for [JENKINS-29477] View bad for Build Pipeline Plugin
The added css rule should remove the left margin, prevent overflowing content and expand the box to at least the width of the screen.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -16,6 +16,13 @@
 
 }
 
+#main-panel
+{
+	margin-left:0px;
+	display: inline-block;
+	min-width:100%;
+} 
+
 /******************** popup ***************************/
 #popup-iframe{
     width: 100%;
